{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 485,
  "lineage": "7d664bb0-305f-22c5-b8c9-640f85ed80ab",
  "resources": [
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:internet-gateway/igw-0d1b792e8f2203693",
            "id": "igw-0d1b792e8f2203693",
            "owner_id": "732075124266",
            "tags": {
              "Name": "Internet"
            },
            "tags_all": {
              "Name": "Internet"
            },
            "vpc_id": "vpc-03b40ac794423d3b0"
          },
          "dependencies": [
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:route-table/rtb-0240d08735e8d80ed",
            "id": "rtb-0240d08735e8d80ed",
            "owner_id": "732075124266",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b40ac794423d3b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:route-table/rtb-0c43bc3c694f4adfc",
            "id": "rtb-0c43bc3c694f4adfc",
            "owner_id": "732075124266",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d1b792e8f2203693",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b40ac794423d3b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_resources.aws_internet_gateway.internet_gateway",
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e47b6371576e754",
            "route_table_id": "rtb-0240d08735e8d80ed",
            "subnet_id": "subnet-0f2f8dac8887d8e8a"
          },
          "dependencies": [
            "module.service_resources.aws_route_table.private",
            "module.service_resources.aws_subnet.private_1",
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d486d22515ea897",
            "route_table_id": "rtb-0240d08735e8d80ed",
            "subnet_id": "subnet-097892e11dff94740"
          },
          "dependencies": [
            "module.service_resources.aws_route_table.private",
            "module.service_resources.aws_subnet.private_2",
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f48c3d1340aaa7e8",
            "route_table_id": "rtb-0c43bc3c694f4adfc",
            "subnet_id": "subnet-0bce1958bed793a34"
          },
          "dependencies": [
            "module.service_resources.aws_internet_gateway.internet_gateway",
            "module.service_resources.aws_route_table.public",
            "module.service_resources.aws_subnet.public_1",
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016c364e33a768fb7",
            "route_table_id": "rtb-0c43bc3c694f4adfc",
            "subnet_id": "subnet-0bf145fcce4490650"
          },
          "dependencies": [
            "module.service_resources.aws_internet_gateway.internet_gateway",
            "module.service_resources.aws_route_table.public",
            "module.service_resources.aws_subnet.public_2",
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:security-group/sg-0841d00f96c9155bf",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0841d00f96c9155bf",
            "ingress": [],
            "name": "admin-sg",
            "name_prefix": "",
            "owner_id": "732075124266",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "admin-sg"
            },
            "tags_all": {
              "Name": "admin-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b40ac794423d3b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:security-group/sg-06b1e488af56f70a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b1e488af56f70a1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05bf326d33ea63d53"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05bf326d33ea63d53"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "api-sg",
            "name_prefix": "",
            "owner_id": "732075124266",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "api-sg"
            },
            "tags_all": {
              "Name": "api-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b40ac794423d3b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:security-group/sg-0784da314476f9ccd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0784da314476f9ccd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b1e488af56f70a1",
                  "sg-0841d00f96c9155bf"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "732075124266",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b40ac794423d3b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:security-group/sg-05bf326d33ea63d53",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bf326d33ea63d53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-sg",
            "name_prefix": "",
            "owner_id": "732075124266",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-sg"
            },
            "tags_all": {
              "Name": "frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b40ac794423d3b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:subnet/subnet-0f2f8dac8887d8e8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2f8dac8887d8e8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732075124266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-03b40ac794423d3b0"
          },
          "dependencies": [
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:subnet/subnet-097892e11dff94740",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097892e11dff94740",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732075124266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-03b40ac794423d3b0"
          },
          "dependencies": [
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:subnet/subnet-0bce1958bed793a34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bce1958bed793a34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "732075124266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-03b40ac794423d3b0"
          },
          "dependencies": [
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:subnet/subnet-0bf145fcce4490650",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf145fcce4490650",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "732075124266",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-03b40ac794423d3b0"
          },
          "dependencies": [
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:vpc/vpc-03b40ac794423d3b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f2aa00199899fb7",
            "default_route_table_id": "rtb-09d54bc51b91a77ad",
            "default_security_group_id": "sg-06004833e2fdb7ee2",
            "dhcp_options_id": "dopt-06dc1d7800debc917",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b40ac794423d3b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d54bc51b91a77ad",
            "owner_id": "732075124266"
          }
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "api_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:security-group-rule/sgr-05f30e7b9a8ef5c7c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05f30e7b9a8ef5c7c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06b1e488af56f70a1",
            "security_group_rule_id": "sgr-05f30e7b9a8ef5c7c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_resources.aws_security_group.api_sg",
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "db_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:security-group-rule/sgr-0a9d3f99abdf0011e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a9d3f99abdf0011e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0784da314476f9ccd",
            "security_group_rule_id": "sgr-0a9d3f99abdf0011e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_resources.aws_security_group.db_sg",
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "frontend_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:security-group-rule/sgr-0492025b78aabc930",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0492025b78aabc930",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05bf326d33ea63d53",
            "security_group_rule_id": "sgr-0492025b78aabc930",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_resources.aws_security_group.frontend_sg",
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:security-group-rule/sgr-0534ee6290c198ae3",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0534ee6290c198ae3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-05bf326d33ea63d53",
            "security_group_id": "sg-06b1e488af56f70a1",
            "security_group_rule_id": "sgr-0534ee6290c198ae3",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_resources.aws_security_group.api_sg",
            "module.service_resources.aws_security_group.frontend_sg",
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:security-group-rule/sgr-0fcac0c6c9ee5a4b2",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0fcac0c6c9ee5a4b2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-05bf326d33ea63d53",
            "security_group_id": "sg-06b1e488af56f70a1",
            "security_group_rule_id": "sgr-0fcac0c6c9ee5a4b2",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_resources.aws_security_group.api_sg",
            "module.service_resources.aws_security_group.frontend_sg",
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:security-group-rule/sgr-0f458aa185a753aa2",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-0f458aa185a753aa2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0841d00f96c9155bf",
            "security_group_id": "sg-0784da314476f9ccd",
            "security_group_rule_id": "sgr-0f458aa185a753aa2",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_resources.aws_security_group.admin_sg",
            "module.service_resources.aws_security_group.db_sg",
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:security-group-rule/sgr-06125ecf7310d3de7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-06125ecf7310d3de7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-06b1e488af56f70a1",
            "security_group_id": "sg-0784da314476f9ccd",
            "security_group_rule_id": "sgr-06125ecf7310d3de7",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_resources.aws_security_group.api_sg",
            "module.service_resources.aws_security_group.db_sg",
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:security-group-rule/sgr-062aa20f468e0be0a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-062aa20f468e0be0a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05bf326d33ea63d53",
            "security_group_rule_id": "sgr-062aa20f468e0be0a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_resources.aws_security_group.frontend_sg",
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.service_resources",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:732075124266:security-group-rule/sgr-0a6a810cbb8391dad",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0a6a810cbb8391dad",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05bf326d33ea63d53",
            "security_group_rule_id": "sgr-0a6a810cbb8391dad",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.service_resources.aws_security_group.frontend_sg",
            "module.service_resources.aws_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}